[2335] Advanced Reference Widget - Review changes
Signed-off-by: Jerome Gout <jerome.gout@obeosoft.com>